--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "npm run unit"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
