--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "12.16.2"
+  },
   "author": "",
   "license": "ISC",
   "description": ""
